Language and Module Visualization #10 +) visualizes the trend of a commit referring to the previous commit of the given stream +) prevent window clipping of the tooltip ~) contains mocked data

--- a/ui/src/components/DataRiverChart/data-river-chart.component.scss
+++ b/ui/src/components/DataRiverChart/data-river-chart.component.scss
@@ -24,6 +24,16 @@
   color         : white;
   pointer-events: none;
 
+  .attribute, .additional {
+    width: fit-content;
+    padding: 3px;
+    border-radius: 5px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color:white;
+    text-transform: capitalize;
+    letter-spacing: 0.15em;
+  }
+
   h1 {
     padding: 5px;
     display: flex;
@@ -33,26 +43,15 @@
     border-bottom: 1px solid;
 
     .additional {
-      padding: 3px;
-      border-radius: 5px;
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-      color:white;
-      text-transform: capitalize;
-      letter-spacing: 0.15em;
       justify-content:center;
       text-align: center;
       display: inline-flex;
       flex-flow: column;
-      //border: 3px solid;
     }
 
     .name {
       padding: 5px;
     }
-  }
-
-  hr{
-    margin: 0.2em auto;
   }
 
   ul {
@@ -62,20 +61,20 @@
     text-align: left;
     padding: 5px;
 
-    li {
+   > li {
       display: flex;
       flex-flow: row;
       padding: 5px 0 3px 0;
       border-bottom: 1px solid;
 
-      i {
+     > i {
         flex: 1;
         padding-right: 5px;
         text-transform: capitalize;
       }
 
-      span {
-        flex: 50% 1;
+      > span {
+        flex: 1;
         justify-content: center;
         flex-flow: column;
         display: flex;
